--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,45 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jasonwjones.pbcs</groupId>
 	<artifactId>pbcs-client</artifactId>
-	<version>1.0.0</version>
-	<name>PBCS Client</name>
+	<version>1.0.1</version>
+	<name>PBJ - The PBCS REST API Java Client</name>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.2.1.RELEASE</version>
 	</parent>
+
+	<url>https://github.com/jasonwjones/pbcs-client</url>
+	<description>PBJ is a Java client for working with the REST API exposed by Oracle's Planning and Budgeting Cloud Service (PBCS).</description>
+	<inceptionYear>2015</inceptionYear>
+
+	<organization>
+		<name>Jason Jones</name>
+		<url>http://www.jasonwjones.com</url>
+	</organization>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:git@github.com:jasonwjones/pbcs-client.git</connection>
+		<developerConnection>scm:git:git@github.com:jasonwjones/pbcs-client.git</developerConnection>
+		<url>git@github.com:jasonwjones/pbcs-client.git</url>
+		<tag>pbcs-client-1.0.1</tag>
+	</scm>
+
+	<developers>
+		<developer>
+			<name>Jason Jones</name>
+		</developer>
+	</developers>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -42,4 +72,5 @@
 			<version>1.2</version>
 		</dependency>
 	</dependencies>
+
 </project>
