--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jasonwjones.pbcs</groupId>
-	<artifactId>pbcs-client</artifactId>
+	<artifactId>pbj-pbcs-client</artifactId>
 	<version>1.0.1</version>
 	<name>PBJ - The PBCS REST API Java Client</name>
 	<parent>
@@ -31,7 +32,7 @@
 		<connection>scm:git:git@github.com:jasonwjones/pbcs-client.git</connection>
 		<developerConnection>scm:git:git@github.com:jasonwjones/pbcs-client.git</developerConnection>
 		<url>git@github.com:jasonwjones/pbcs-client.git</url>
-		<tag>pbcs-client-1.0.1</tag>
+		<tag>pbj-pbcs-client-1.0.1</tag>
 	</scm>
 
 	<developers>
@@ -71,6 +72,61 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
+
+	<properties>
+		<github.global.server>github</github.global.server>
+	</properties>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.3</version>
+				<configuration>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
+
+	<distributionManagement>
+		<site>
+			<id>ftp-jasonwjones-developer</id>
+			<url>ftp://developer.jasonwjones.com/pbj-pbcs-java-client</url>
+			<name>foo</name>
+		</site>
+		<repository>
+			<id>ftp-jasonwjones-developer</id>
+			<url>ftp://developer.jasonwjones.com/pbj-pbcs-java-client</url>
+			<name>foo</name>
+		</repository>
+	</distributionManagement>
+
+	<build>
+		<extensions>
+			<!-- Enabling the use of FTP -->
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ftp</artifactId>
+				<version>2.10</version>
+			</extension>
+		</extensions>
+	</build>
+<!-- 
+	<repositories>
+		<repository>
+			<id>gemfire-repository</id>
+			<name>Gemfire Repository</name>
+			<url>http://dist.gemstone.com/maven/release</url>
+		</repository>
+	</repositories>
+	-->
+
 
 </project>
