--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
 
 	<scm>
 		<connection>scm:git:git@github.com:jasonwjones/pbcs-client.git</connection>
-		<developerConnection>scm:git:git@github.com:jasonwjones/pbcs-client.git</developerConnection>
-		<url>git@github.com:jasonwjones/pbcs-client.git</url>
+		<developerConnection>scm:git:git@github.com:jasonwjones/pbj-pbcs-client.git</developerConnection>
+		<url>git@github.com:jasonwjones/pbj-pbcs-client.git</url>
 		<tag>pbj-pbcs-client-1.0.1</tag>
 	</scm>
 
@@ -96,37 +96,92 @@
 	</reporting>
 
 	<distributionManagement>
-		<site>
-			<id>ftp-jasonwjones-developer</id>
-			<url>ftp://developer.jasonwjones.com/pbj-pbcs-java-client</url>
-			<name>foo</name>
-		</site>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
 		<repository>
-			<id>ftp-jasonwjones-developer</id>
-			<url>ftp://developer.jasonwjones.com/pbj-pbcs-java-client</url>
-			<name>foo</name>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
 
+	<!-- <distributionManagement> <site> <id>ftp-jasonwjones-developer</id> 
+		<url>ftp://developer.jasonwjones.com/pbj-pbcs-java-client</url> <name>foo</name> 
+		</site> <repository> <id>ftp-jasonwjones-developer</id> <url>ftp://developer.jasonwjones.com/pbj-pbcs-java-client</url> 
+		<name>foo</name> </repository> </distributionManagement> -->
+
 	<build>
-		<extensions>
-			<!-- Enabling the use of FTP -->
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ftp</artifactId>
-				<version>2.10</version>
-			</extension>
-		</extensions>
+		<!-- <extensions> <extension> <groupId>org.apache.maven.wagon</groupId> 
+			<artifactId>wagon-ftp</artifactId> <version>2.10</version> </extension> </extensions> -->
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.1</version>
+					<configuration>
+						<mavenExecutorId>forked-path</mavenExecutorId>
+						<useReleaseProfile>false</useReleaseProfile>
+						<arguments>-Psonatype-oss-release</arguments>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
+		<plugins>
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-deploy-plugin</artifactId> 
+				<configuration> <skip>true</skip> </configuration> </plugin> -->
+			<!-- <plugin> <groupId>org.sonatype.plugins</groupId> <artifactId>nexus-staging-maven-plugin</artifactId> 
+				<version>1.6.6</version> <extensions>true</extensions> <configuration> <serverId>ossrh</serverId> 
+				<nexusUrl>http://oss.sonatype:8081/nexus/</nexusUrl> </configuration> </plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.7</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
-<!-- 
-	<repositories>
-		<repository>
-			<id>gemfire-repository</id>
-			<name>Gemfire Repository</name>
-			<url>http://dist.gemstone.com/maven/release</url>
-		</repository>
-	</repositories>
-	-->
-
-
 </project>
