--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jasonwjones.pbcs</groupId>
 	<artifactId>pbj-pbcs-client</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<name>PBJ - The PBCS REST API Java Client</name>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -77,6 +77,11 @@
 			<artifactId>zip4j</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
@@ -146,7 +151,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.7</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -179,6 +183,33 @@
 						<goals>
 							<goal>sign</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration> 
+							<relocations>
+								<relocation>
+									<pattern>org.apache.http</pattern>
+									<shadedPattern>org.shaded.apache.http</shadedPattern>
+									<!-- 
+									<excludes>
+										<exclude>org.codehaus.plexus.util.xml.Xpp3Dom</exclude>
+										<exclude>org.codehaus.plexus.util.xml.pull.*</exclude>
+									</excludes>
+									-->
+								</relocation>
+							</relocations>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
