Don't clobber logback.xml, support PlanTypes/Dimensions from AIF

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,10 @@
 			<artifactId>jcommander</artifactId>
 			<version>1.48</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>		
 	</dependencies>
 
 	<properties>
