--- a/src/main/resources/Xlog4j.properties
+++ b/src/main/resources/Xlog4j.properties
@@ -5,4 +5,4 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p [%c] %m%n
 
 log4j.logger.org.apache.http=DEBUG
-log4j.logger.org.apache.http.wire=ERROR
+#log4j.logger.org.apache.http.wire=DEBUG
