--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jasonwjones.pbcs</groupId>
 	<artifactId>pbj-pbcs-client</artifactId>
-	<version>1.0.4-SNAPSHOT</version>
+	<version>1.0.4</version>
 	<name>PBJ - The PBCS REST API Java Client</name>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -32,7 +32,7 @@
 		<connection>scm:git:git@github.com:jasonwjones/pbcs-client.git</connection>
 		<developerConnection>scm:git:git@github.com:jasonwjones/pbj-pbcs-client.git</developerConnection>
 		<url>git@github.com:jasonwjones/pbj-pbcs-client.git</url>
-		<tag>pbj-pbcs-client-1.0.1</tag>
+		<tag>pbj-pbcs-client-1.0.4</tag>
 	</scm>
 
 	<developers>
