--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jasonwjones.pbcs</groupId>
 	<artifactId>pbj-pbcs-client</artifactId>
-	<version>1.0.4</version>
+	<version>1.0.5</version>
 	<name>PBJ - The PBCS REST API Java Client</name>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -11,13 +11,13 @@
 		<version>1.2.1.RELEASE</version>
 	</parent>
 
-	<url>https://github.com/jasonwjones/pbcs-client</url>
+	<url>https://github.com/jasonwjones/pbj-pbcs-client</url>
 	<description>PBJ is a Java client for working with the REST API exposed by Oracle's Planning and Budgeting Cloud Service (PBCS).</description>
 	<inceptionYear>2015</inceptionYear>
 
 	<organization>
 		<name>Jason Jones</name>
-		<url>http://www.jasonwjones.com</url>
+		<url>https://www.jasonwjones.com</url>
 	</organization>
 
 	<licenses>
@@ -29,10 +29,10 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:git@github.com:jasonwjones/pbcs-client.git</connection>
+		<connection>scm:git:git@github.com:jasonwjones/pbj-pbcs-client.git</connection>
 		<developerConnection>scm:git:git@github.com:jasonwjones/pbj-pbcs-client.git</developerConnection>
 		<url>git@github.com:jasonwjones/pbj-pbcs-client.git</url>
-		<tag>pbj-pbcs-client-1.0.4</tag>
+		<tag>pbj-pbcs-client-1.0.5</tag>
 	</scm>
 
 	<developers>
